--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "prettier --check \"src/**/*.js\""
   },
   "dependencies": {
-    "canvas-confetti": "^1.2.0"
+    "canvas-confetti": "^1.2.0",
+    "three": "^0.118.3"
   },
   "devDependencies": {
     "prettier": "^2.0.5",
